# Surface_mesh_simplification

./: CMakeLists.txt  Mesh_simplification_color_dialog.ui  Mesh_simplification_color_plugin.cpp  README.md
